doc: avoid hiding by navigation bar in anchor jumping
PR-URL: https://github.com/nodejs/node/pull/45131
Fixes: https://github.com/nodejs/node/issues/42286

--- a/doc/api_assets/style.css
+++ b/doc/api_assets/style.css
@@ -67,9 +67,16 @@ h5 :target {
 }
 
 /*--------------------- Layout and Typography ----------------------------*/
+@media (prefers-reduced-motion: no-preference) {
+  html {
+    scroll-behavior: smooth;
+  }
+}
+
 html {
   font-size: 1rem;
   overflow-wrap: break-word;
+  scroll-padding-top: 50vh;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-variant-ligatures: none;
